Better class naming

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         <div class="col-lg-3 col-md-8 bg-light">
             <!-- in order to get one email preview per line-->
-            <div class="email-previews d-flex flex-column">
+            <div class="email-prev-bar d-flex flex-column">
                 <!-- filter dropdown for phone and desktop view -->
                 <div class="email-prev dropdown">
                     <a class="btn btn-secondary dropdown-toggle show d-md-none d-lg-block" style="width:100%" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
