--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
                 <div class="d-flex align-items-center gap-3">
                     <!-- compose -->
                     <div class="compose">
+                        <!-- icon for phone and tablet -->
                         <i class="fa-regular fa-envelope ms-auto d-lg-none d-xl-none" style="color: #ecf1f8;"
                             data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" href="#offcanvas" role="button"
                             aria-controls="offcanvasRight"></i>
+                        <!-- button for desktop -->
                         <button type="button"
                             class="compose-lg btn btn-primary btn-lg ms-auto d-none d-lg-block d-xl-block"
                             data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" href="#offcanvas" role="button"
@@ -100,9 +102,29 @@
                     </div>
 
                     <!-- account icon -->
-                    <a class="account navbar-brand" style="color:#ecf1f8" href="#">
+                    <a class="account navbar-brand" data-bs-toggle="modal" data-bs-target="#exampleModal" style="color:#ecf1f8" href="#">
                         <i class="fa-solid fa-user"></i>
                     </a>
+                    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
                     <!-- search bar -->
                     <form class="d-flex" role="search" id="search-bar">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
