--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button type="button" class="compose-lg btn btn-primary btn-sm ms-auto" href="#" role="button">Deleted</button>
                     <button type="button" class="compose-lg btn btn-primary btn-sm ms-auto" href="#" role="button">Archive</button>
                 </div>
-                <!-- filter -->
+                <!-- filter for tablet -->
                 <div class="dropdown">
                     <a class="btn btn-secondary dropdown-toggle show d-none d-md-block d-lg-none " href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Filter
@@ -151,18 +151,18 @@
 
         <div class="col-lg-3 col-md-8 bg-light">
             <!-- in order to get one email preview per line-->
+            <!-- filter dropdown for phone and desktop view -->
+            <div class="email-prev dropdown">
+                <a class="btn btn-secondary dropdown-toggle show d-md-none d-lg-block" style="width:100%" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Filter
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">Unread</a>
+                    <a class="dropdown-item" href="#">Pinned</a>
+                    <a class="dropdown-item" href="#">Has attachments</a>
+                </div>
+            </div>   
             <div class="email-prev-bar d-flex flex-column">
-                <!-- filter dropdown for phone and desktop view -->
-                <div class="email-prev dropdown">
-                    <a class="btn btn-secondary dropdown-toggle show d-md-none d-lg-block" style="width:100%" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Filter
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                      <a class="dropdown-item" href="#">Unread</a>
-                      <a class="dropdown-item" href="#">Pinned</a>
-                      <a class="dropdown-item" href="#">Has attachments</a>
-                    </div>
-                </div>   
                 <!-- email previews that will be responsive to all screens-->
                 <button type="button" class="email-highlight email-prev btn">UNIQLO USA <br>Fleece to meet you<br>Take on cool weather in style with our Fleece Collection.<br>
                     <a class="btn btn-primary" href="#" role="button">Reply</a>
