Remove redundant closing div tag and remove darkgrey background from subject

--- a/index.html
+++ b/index.html
@@ -204,20 +204,21 @@
         </div>
 
             <!-- email highlight to show on large screen -->
-            <div class="col-9 d-none d-lg-block">
-                <div class="subject">Fleece to meet you</div>
-                <div class="message-highlight col-11 m-3">UNIQLO USA <br>To You<br><br>
-                    <div class="d-flex justify-content-center promo-pics">
-                        <img src="./images/pexels-danik-prihodko-15759557.jpg" alt="girl in fleece" width="250"
-                            height="350">
-                        <img src="./images/pexels-danik-prihodko-15759563.jpg" alt="girl in fleece" width="250"
-                            height="350">
-                        <img src="./images/pexels-danik-prihodko-15759572.jpg" alt="girl in fleece" width="250"
-                            height="350">
-                    </div>
-                    <div class="message-body"><br><br>Take on cool weather in style with our Fleece Collection. Crafted
-                        with soft, cozy, lightweight, and functional fabrics.</div>
+        <div class="col-9 d-none d-lg-block">
+            <div class="subject">
+              Fleece to meet you
+            </div>
+            <div class="msg-highlight m-3">UNIQLO USA <br>To You<br><br>
+                <div class="d-flex justify-content-center promo-pics">
+                    <img src="./images/pexels-danik-prihodko-15759557.jpg" alt="girl in fleece" width="250"
+                        height="350">
+                    <img src="./images/pexels-danik-prihodko-15759563.jpg" alt="girl in fleece" width="250"
+                        height="350">
+                    <img src="./images/pexels-danik-prihodko-15759572.jpg" alt="girl in fleece" width="250"
+                        height="350">
                 </div>
+                <div class="message-body"><br><br>Take on cool weather in style with our Fleece Collection. Crafted
+                    with soft, cozy, lightweight, and functional fabrics.</div>
             </div>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
