Change class names

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             </div>
         </div>
 
-        <div class="col-lg-3 col-md-8 bg-light">
+        <div class="email-prev-bar col-lg-3 col-md-8">
             <!-- in order to get one email preview per line-->
             <!-- filter dropdown for phone and desktop view -->
             <div class="email-prev dropdown">
-                <a class="btn btn-secondary dropdown-toggle show d-md-none d-lg-block" style="width:100%" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="btn btn-secondary dropdown-toggle show d-md-none d-lg-block bg-dark" style="width:100%" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Filter
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -162,7 +162,7 @@
                     <a class="dropdown-item" href="#">Has attachments</a>
                 </div>
             </div>   
-            <div class="email-prev-bar d-flex flex-column">
+            <div class="email-previews d-flex flex-column">
                 <!-- email previews that will be responsive to all screens-->
                 <button type="button" class="email-highlight email-prev btn">UNIQLO USA <br>Fleece to meet you<br>Take on cool weather in style with our Fleece Collection.<br>
                     <a class="btn btn-primary" href="#" role="button">Reply</a>
@@ -204,11 +204,11 @@
         </div>
 
             <!-- email highlight to show on large screen -->
-        <div class="col-9 d-none d-lg-block">
+        <div class="msg-highlight col-9 d-none d-lg-block">
             <div class="subject">
               Fleece to meet you
             </div>
-            <div class="msg-highlight m-3">UNIQLO USA <br>To You<br><br>
+            <div class="msg-body m-3">UNIQLO USA <br>To You<br><br>
                 <div class="d-flex justify-content-center promo-pics">
                     <img src="./images/pexels-danik-prihodko-15759557.jpg" alt="girl in fleece" width="250"
                         height="350">
